--- a/index.html
+++ b/index.html
@@ -144,34 +144,34 @@
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        Freelance Web Designer
-                                    </h5><span class="label label-info">2009-2010</span>
+                                        Amazon.com Inc. - Software Engineer Intern
+                                    </h5><span class="label label-info">2013-2013</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Worked on Amazon Instant Video Team
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Python Programmer
-                                    </h5><span class="label label-info">2010-2011</span>
+                                        Amazon.com Inc. - Software Engineer Intern
+                                    </h5><span class="label label-info">2014-2014</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Worked on Amazon Marketplace Team
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Social Media Lunatic
-                                    </h5><span class="label label-info">2011-2012</span>
+                                        Arizona State University - Student Web Developer
+                                    </h5><span class="label label-info">2013-2014</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Maintained and developed sites on Wordpress and Drupal for the University Technology Office
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Being Awesome
-                                    </h5><span class="label label-danger">2012-Till Death</span>
+                                        Arizona State University - Lead Student Developer
+                                    </h5><span class="label label-danger">2014-Till Death</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Developer for ASU Information Security Department
                                     </p>
                                 </li>
                             </ul>
@@ -181,18 +181,18 @@
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        NoUse School
-                                    </h5><span class="label label-success">2001-2002</span>
+                                        Arizona State University
+                                    </h5><span class="label label-success">2010-2015</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Bachelor of Science in Computer Science: Information Assurance
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Super Useless College
-                                    </h5><span class="label label-warning">2002-2008</span>
+                                        Glendale Community College
+                                    </h5><span class="label label-warning">2009-2010</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Associates of Applied Science in Networking: Cisco Technologies
                                     </p>
                                 </li>
                             </ul>
@@ -206,57 +206,54 @@
                                     Software
                                 </h5>
                                 <div class="meter emerald">
-                                    <span style="width: 33.3%"><span>Photoshop</span></span>
+                                    <span style="width: 25.0%"><span>Photoshop</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 90%"><span>Illustrator</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 60%"><span>InDesign</span></span>
-                                </div>
-                                <div class="meter sunflower">
-                                    <span style="width: 40%"><span>Firework</span></span>
-                                </div>
-                                <div class="meter midnight">
-                                    <span style="width: 70%"><span>Dreamweaver</span></span>
+                                    <span style="width: 90%"><span>Git</span></span>
                                 </div>
                                 <div class="meter pomengrate">
-                                    <span style="width: 60%"><span>Microsoft Office</span></span>
+                                    <span style="width: 70%"><span>Microsoft Products</span></span>
                                 </div>
                                 <div class="meter asbestos">
-                                    <span style="width: 65%"><span>Linux</span></span>
+                                    <span style="width: 80%"><span>Linux</span></span>
+                                </div>
+                                <div class="meter sunflower">
+                                    <span style="width: 60%"><span>Cisco IOS</span></span>
                                 </div>
                                 <div class="break"></div>
                                 <h5>
                                     Design
                                 </h5>
                                 <div class="meter emerald">
-                                    <span style="width: 33.3%"><span>User Interface</span></span>
+                                    <span style="width: 40.0%"><span>User Interface</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 90%"><span>Typography</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 60%"><span>Web Applications</span></span>
+                                    <span style="width: 90%"><span>Web Applications</span></span>
                                 </div>
                                 <div class="break"></div>
                                 <h5>
                                     Programming Language
                                 </h5>
                                 <div class="meter emerald">
-                                    <span style="width: 53.3%"><span>HTML/CSS</span></span>
+                                    <span style="width: 90.0%"><span>HTML/CSS</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 80%"><span>PHP/MySql</span></span>
+                                    <span style="width: 85%"><span>PHP/MySql</span></span>
                                 </div>
                                 <div class="meter wisteria">
-                                    <span style="width: 95%"><span>jQuery/JavaScript</span></span>
+                                    <span style="width: 99%"><span>jQuery/JavaScript/AngularJS</span></span>
                                 </div>
                                 <div class="meter sunflower">
-                                    <span style="width: 75%"><span>Ruby</span></span>
+                                    <span style="width: 80%"><span>NoSQL</span></span>
                                 </div>
                                 <div class="meter asbestos">
-                                    <span style="width: 82%"><span>Python</span></span>
+                                    <span style="width: 70%"><span>Python</span></span>
+                                </div>
+                                <div class="meter midnight">
+                                    <span style="width: 80%"><span>Java</span></span>
+                                </div>
+                                <div class="meter pomengrate">
+                                    <span style="width: 40%"><span>Ruby</span></span>
                                 </div>
                             </div>
                         </div>
@@ -268,30 +265,30 @@
                     <section class="clearfix">
                         <div class="g1">
                             <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/1" alt="">
+                                <img src="//i.imgur.com/vNx3Jx3.png" alt="Hours of Ops Image">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/1" class="btn">Full View</a>
+                                        <a href="http://hoursofops.com/" class="btn">Full Site</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="g1">
                             <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/2" alt="">
+                                <img src="//i.imgur.com/lyn5w9N.png" alt="Firmly Grasp Image">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/2" class="btn">Full View</a>
+                                        <a href="http://firmlygrasp.com" class="btn">Full Site</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="g1">
                             <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/3" alt="">
+                                <img src="//i.imgur.com/nr6JGWG.png" alt="Quail City Image">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/3" class="btn">Full View</a>
+                                        <a href="http://quality.com" class="btn">Full Site</a>
                                     </div>
                                 </div>
                             </div>
@@ -299,35 +296,24 @@
                         <div class="break"></div>
                         <div class="g1">
                             <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/4" alt="">
+                                <img src="//i.imgur.com/fDtYyhH.png" alt="Sys Status Image">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/4" class="btn">Full View</a>
+                                        <a href="http://systat.us" class="btn">Full Site</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="g1">
                             <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/5" alt="">
+                                <img src="//i.imgur.com/6Uk4n5y.png" alt="In B4 Image">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/5" class="btn">Full View</a>
+                                        <a href="://inb4.us" class="btn">Full Site</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="g1">
-                            <div class="image">
-                                <img src="http://lorempixel.com/306/306/business/2" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/business/2" class="btn">Full View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
                     </section>
                 </div>
               <!-- End Portfolio Data -->
